--- a/instant-distance/Cargo.toml
+++ b/instant-distance/Cargo.toml
@@ -19,7 +19,9 @@ indicatif = { version = "0.17", optional = true }
 num_cpus = "1.13"
 ordered-float = "4.1"
 parking_lot = "0.12"
-rand = { version = "0.8", features = ["small_rng"] }
+# rand = { version = "0.8", features = ["small_rng"] }
+getrandom = { version = "0.2.3", features = ["js"]}
+rand = { version = "0.7.3", features = ["small_rng"]}
 rayon = "1.5"
 serde = { version = "1.0.118", features = ["derive"], optional = true }
 serde-big-array = { version = "0.5.0", optional = true }
